# WUMU-AI-Novel-Studio

./: .gitignore  README.md  ReleasesVersion.md  TODOS.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  version.json  vite.config.ts  vitest.config.ts  临时.md
scripts/: release.js  sync-version.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/__tests__/services/: prompts.test.ts  storage.test.ts
src/__tests__/stores/: novelStore.test.ts  wizardStore.test.ts
src/components/layout/: AppShell.tsx  RightPanel.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx
src/components/settings/: LLMSettingsPanel.tsx
src/components/shared/: AutoGenerationFloat.tsx  Button.tsx  ChapterViewDialog.tsx  ConfirmDialog.tsx  ErrorBoundary.tsx  FullReviewDialog.tsx  ModelSelector.tsx  NewProjectDialog.tsx  RenameDialog.tsx  SettingsDialog.tsx  Spinner.tsx  Toast.tsx  UpdateBanner.tsx
src/components/wizard/: StepRenderer.tsx  WizardShell.tsx
src/data/: defaultGenres.ts  defaultWritingStyles.ts
src/hooks/: useGeneration.ts
src/lib/: extractJson.ts  persist.ts  utils.ts
src/services/: autoGenerationService.ts  extractArchData.ts  extractOutlineData.ts  updateService.ts
src/services/llm/: base.ts  index.ts  openai.ts
src/services/prompts/: index.ts  writingStyles.ts
src/stores/: characterStore.ts  llmStore.ts  novelStore.ts  sessionStore.ts  uiStore.ts  wizardStore.ts
src/theme/: globals.css
src/types/: character.ts  index.ts  llm.ts  novel.ts  project.ts
(+11 files in other folders)
